fixed navbar alignment

--- a/src/index.css
+++ b/src/index.css
@@ -11,5 +11,5 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  margin-top: -8px;
+  margin: -8px 0px 0px -8px;
 }
